[package]
name = "classifui"
version = "0.1.0"
authors = ["Vadim Petrochenkov <vadim.petrochenkov@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2"
fxhash = "0.2"
liblinear = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-xid = "0.2"
walkdir = "2"

[profile.release]
# lto = "fat"
# codegen-units = 1
panic = "abort"
